# this-week-in-past

./: .deepsource.toml  .dockerignore  .gitignore  .releaserc  AGENTS.md  CHANGELOG.md  Cargo.toml  Containerfile  Dockerfile  LICENSE  README.md  build-local.sh  docker-compose.yaml  package-lock.json  package.json  pipe.Dockerfile  prep-build-env.sh  renovate.json  stage-arch-bin.sh  translate-arch-to-rust-tripple.sh
.github/workflows/: build-image.yaml  code-style.yaml  scheduled-security-audit.yaml  security-audit.yaml
.github/workflows/scripts/: prep-build-env.sh  upload-asset-to-release.sh
benches/: benchmarks.rs
src/: config.rs  config_endpoint.rs  exif_reader.rs  filesystem_client.rs  geo_location.rs  geo_location_cache.rs  image_processor.rs  image_processor_test.rs  in_memory_cache.rs  integration_test_config_api.rs  integration_test_resources_api.rs  integration_test_rest_api.rs  integration_test_weather_api.rs  kv_store.rs  main.rs  resource_endpoint.rs  resource_processor.rs  resource_processor_test.rs  resource_reader.rs  resource_reader_test.rs  resource_store.rs  routes.rs  samba_client.rs  scheduler.rs  utils.rs  weather_endpoint.rs  weather_processor.rs  web_app_endpoint.rs  web_dav_client.rs
static/: index.html  script.js  style.css
web-app/: index.html  script.js  style.css
