[package]
name = "this-week-in-past"
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["Rouven Himmelstein"]
description = "Aggregate images taken this week, from previous years and presents them on a web page with slideshow."
readme = "README.md"
homepage = "https://github.com/RouHim/this-week-in-past"
repository = "https://github.com/RouHim/this-week-in-past"
keywords = ["image", "gallery", "slideshow", "week"]

[dependencies]
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
md5 = "0.7"
ureq = "2.8"
actix-http = { version = "3.4", features = ["rustls"] }
actix-web = { version = "4.4", features = ["rustls"] }
clokwerk = "0.4"
kamadak-exif = "0.5"
rayon = "1.8"
regex = "1.10"
image = "0.24"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
# Use git version (https://github.com/knopp/mime_guess) of mime_guess until https://github.com/abonander/mime_guess/pull/82 is merged
mime_guess = { git = "https://github.com/knopp/mime_guess", branch = "add_heif_jxl" }
r2d2 = "0.8"
rusqlite = { version = "0.30", features = ["bundled"] }
r2d2_sqlite = "0.23"

[dev-dependencies]
assertor = "0.0"
pretty_assertions = "1.4"
actix-rt = "2.9"
ureq = "2.8"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Strip debug symbols
