[package]
name = "this-week-in-past"
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["Rouven Himmelstein"]
description = "Aggregate images taken this week, from previous years and presents them on a web page with slideshow."
readme = "README.md"
homepage = "https://github.com/RouHim/this-week-in-past"
repository = "https://github.com/RouHim/this-week-in-past"
keywords = ["image", "gallery", "slideshow", "week"]

[dependencies]
lazy_static = "1.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
chrono = { version = "0.4.38", features = ["serde"] }
md5 = "0.8"
ureq = "3.0.0"
actix-web = { version = "4.5.1", features = ["rustls"] }
clokwerk = "0.4"
kamadak-exif = "0.6"
rayon = "1.10"
regex = "1.10.4"
image = "0.25.1"
log = "0.4.21"
env_logger = "0.11.3"
rand = "0.9.0"
mime_guess = "2.0.5"
r2d2 = "0.8.10"
rusqlite = { version = "0.38", features = ["bundled"] }
r2d2_sqlite = "0.31"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.43"

[dev-dependencies]
assertor = "0.0.4"
pretty_assertions = "1.4"
actix-rt = "2.9"
ureq = "3.0.0"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Strip debug symbols
